chore: Small refactorings to improves readability and maintainability